--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.0.0",
     "rxjs": "~6.3.3",
+    "shelljs": "^0.8.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
